# AMMM-project

./: .gitignore  CMakeLists.txt  README.md  generate.sh  output.csv  run  run.sh  solutions  solutions_greedy  solutions_opl  test-opl.sh  test.sh
doc/report/: correct.aux  report.aux  report.tex
excels/: custom_dat.csv  graph.py  results-opl.csv  results-opl_2.csv  results.csv  results_2.csv
olp/: project.mod
proves/: timeout.cpp  timeout2.cpp
sol/: project.1.sol  project.2.sol  project.3.sol  project.5.sol  project.6.sol  project.8.sol
sol-opl/: 020.dat.sol  030.dat.sol  040.dat.sol  050.dat.sol  060.dat.sol  070.dat.sol  080.dat.sol  090.dat.sol  100.dat.sol  110.dat.sol  120.dat.sol  130.dat.sol  140.dat.sol  150.dat.sol  160.dat.sol  170.dat.sol  180.dat.sol  190.dat.sol  200.dat.sol  210.dat.sol  220.dat.sol  230.dat.sol  240.dat.sol  250.dat.sol  260.dat.sol  270.dat.sol  280.dat.sol  290.dat.sol  300.dat.sol
solver/: hill.hpp  input.cpp  input.hpp  main.cpp  parser.cpp  parser.hpp  random.hpp  solver.cpp  solver.hpp  state.cpp  state.hpp  test.cpp  test.hpp  timeout.cpp  timeout.hpp  util.hpp  visit.cpp  visit.hpp
